[package]
name = "trust-me-2"
version = "0.2.0"
edition = "2021"
authors = ["Fischer <lolhampton2@gmail.com>"]
description = "A convenient macro to tell the Rust compiler that you know better and to leave you alone regarding unsafe code."
license = "MIT"
keywords = ["trust-me", "unsafe", "macro"]
repository = "https://github.com/fischer36/trust-me-2/"
readme = "README.md"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true

